--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Jiarui LI
 subtitle: 'Jiarui Li Website'
-description: 'Jiarui Li Is Writing Here'
+description: 'Jiarui Li Resume Is Here'
 keywords:
 author: Jiarui LI
 language: en
